[package]
name = "st"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
audio = { version = "0.1.0", path = "../audio" }
chrono = "0.4.41"
futures-channel = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls", "tokio-native-tls"] }
tungstenite = { version = "0.26.2", features = ["native-tls"] }
uuid = { version = "1.17.0", features = ["v4", "v8"] }
